--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "simple book app",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "start": "live-server",
-    "build": "rollup"
+    "build": "rollup -c --watch"
   },
   "keywords": [
     "books"
@@ -13,7 +14,9 @@
   "author": "Serge Ch",
   "license": "ISC",
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^15.0.2",
     "eslint": "^8.40.0",
-    "rollup": "^3.22.0"
+    "rollup": "^3.22.0",
+    "rollup-plugin-import-css": "^3.2.1"
   }
 }
