--- a/package.json
+++ b/package.json
@@ -18,5 +18,16 @@
     "eslint": "^8.40.0",
     "rollup": "^3.22.0",
     "rollup-plugin-import-css": "^3.2.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sergey87chuvasov/booksApp.git"
+  },
+  "bugs": {
+    "url": "https://github.com/sergey87chuvasov/booksApp/issues"
+  },
+  "homepage": "https://github.com/sergey87chuvasov/booksApp#readme",
+  "dependencies": {
+    "on-change": "^4.0.2"
   }
 }
